# cio

./: .gitignore  CMakeLists.txt  Makefile  README.md  cio.pc.in
.github/workflows/: c-cpp.yml  release.yml
cmake/: cioConfig.cmake.in
debian/: changelog  control  copyright  libcio-1.install  libcio-dev.install  rules
expected/: cio_facts.out
include/: cio.h
packaging/alpine/: APKBUILD
packaging/homebrew/: cio.rb
src/: cio.c  cio_facts.c
